[tool.poetry]
name = "web-hw5"
version = "0.1.0"
description = ""
authors = ["Kiril Sheremeta <120675223+kirilsheremeta@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_hw5"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
